<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/cream"
    tools:context=".Activities.SignInActivity">

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:elevation="20dp"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/authenticate_gradient_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_gravity="end"
                android:orientation="vertical"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="#030303"
                        android:textSize="30sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailEtLogin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordEtLogin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginTop="10dp"
                        app:endIconMode="password_toggle"
                        app:endIconTint="#000">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="#d5d5d5" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="#d5d5d5" />

                    <TextView
                        android:id="@+id/forgotPasswordTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/forgot_password"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/loginBt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:backgroundTint="#1C1B1B"
                        android:clickable="true"
                        android:padding="10dp"
                        android:text="Log.in"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/createAccountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/Register"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</FrameLayout>