<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.UserDetails">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/teal_700"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtrefer"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:focusable="true"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="User Detials"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Name"
            android:textAllCaps="true"
            android:textColor="#030303"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/addressEtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Address"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:minHeight="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/grey_cursor_color"
            android:textSize="15sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="#d5d5d5" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textColor="#030303"
            android:textSize="20sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Address"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:minHeight="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/grey_cursor_color"
            android:textSize="15sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="#d5d5d5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/pinCode"
                android:textColor="#c2c2c2"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/city"
                android:textColor="#c2c2c2"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pincodeEtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/grey_cursor_color"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/cityEtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/grey_cursor_color"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="#d5d5d5" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#d5d5d5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/state"
                android:textColor="#c2c2c2"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/country"
                android:textColor="#c2c2c2"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/stateEtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/grey_cursor_color"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/countryEtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/grey_cursor_color"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="#d5d5d5" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#d5d5d5" />
        </LinearLayout>

        <Button
            android:id="@+id/submitBtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:backgroundTint="#1C1B1B"
            android:clickable="true"
            android:padding="10dp"
            android:text="Submit."
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>